# Aria

./: .gitignore  COLLABORATION.md  Makefile  README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
deploy/: docker-compose.api.yml
docs/: SUPER_AUTONOMY_V2.md  agent-execution-report-20260303.md  agent-sprint-board-20260303.md  ailovem-github-launch-quickstart.md  antigravity-ui-motion-spec-v1.md  antigravity-ui-now-20260304.md  aria-closed-loop-builtins-v1.md  aria-independent-product-charter.md  aria-soul-persona-bible.md  aria_companion_research_and_upgrade_plan_2026-03-07.md  aria_skill_mcp_1000repo_shortlist_2026-03-07.md  authority-learning-playbook.md  autonomous-expansion-supervision-v1.md  backend-architecture-v2-from-frontend-20260303.md  backend-layman-architecture-v1.md  brain-system-5-modules-v1.md  button-matrix.md  capability-injection-codex-openclaw-v1.md  engineering-quality-standard.md  entertainment-scene-sprint-note-20260303.md  four-scene-multi-agent-architecture-v3-20260304.md  four-scenes-frontend-to-backend-roadmap-20260303.md  frontend-backend-foundation-v1.md  go-nogo-decision-current-v1.md  independent-deployment-blueprint.md  macos-signing-notarization-prerequisites.md  native-bridge-expansion-plan.md  non-tech-quickstart-zh.md  one-click-setup.md  openclaw-autonomy-infusion-v2-20260305.md  openclaw-homework-infusion-matrix-v1.md  openclaw-runtime-execution-pack-v1.md  (+16 more)
(+173 files in other folders)
