[package]
name = "aria_desktop"
version = "0.1.0"
description = "Aria desktop shell"
authors = ["Aria Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-opener = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]
